@@ -1,7 +1,11 @@
+2006-05-03 Anatoly Sokolov <aesok@post.ru>
+
+	* include/avr/iocanxx.h (CANSIT): Add.
+
 2006-04-29 Anatoly Sokolov <aesok@post.ru>
 
-	* /include/avr/sfr_defs.h (_MMIO_DWORD, _SFR_MEM32, _SFR_DWORD): Add.
-	* /include/avr/iocanxx.h (CANIDT, CANIDM): Add.
+	* include/avr/sfr_defs.h (_MMIO_DWORD, _SFR_MEM32, _SFR_DWORD): Add.
+	* include/avr/iocanxx.h (CANIDT, CANIDM): Add.
 
 2006-04-26 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
